--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(Romanize)
 
-set(SOURCE_FILES main.c)
+set(SOURCE_FILES Romanize.c)
 add_executable(Romanize ${SOURCE_FILES})
